--- a/MySecurity2/src/main/resources/templates/vitemList.html
+++ b/MySecurity2/src/main/resources/templates/vitemList.html
@@ -25,8 +25,8 @@
     </div>
 <footer>
 	<button class="Vhome" onclick="location.href='vhome'">戻る</button>
-        <button class="StoreReg" onclick="location.href='vstoreReg'">店舗登録</button>
-        <button class="DbReg" onclick="location.href='vdbReg'">DB登録</button>
+        <button class="StoreReg" onclick="location.href='vstoreReg'">値引き登録</button>
+    
        
 </footer>
 </html>
