--- a/MySecurity2/src/main/resources/templates/uss.html
+++ b/MySecurity2/src/main/resources/templates/uss.html
@@ -4,48 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>店舗検索</title>
-    <link rel="stylesheet" th:href="@{/css/style4.css}">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <title>ホーム画面</title>
 </head>
 <body>
-	<form id="search-form">
-    <header>
-        <h1>店舗検索</h1>
-    </header>
-
-    
-        <div>
-            <label for="storeName">店舗名:</label>
-            <input type="text" id="storeName" name="storeName">
-        </div>
-        <div>
-            <label for="businessHours">営業時間:</label>
-            <input type="text" id="businessHours" name="businessHours">
-        </div>
-        <div>
-            <label for="address">住所:</label>
-            <input type="text" id="address" name="address">
-        </div>
-        <div>
-            <label for="phoneNumber">電話番号:</label>
-            <input type="tel" id="phoneNumber" name="phoneNumber">
-        </div>
-
-        <div>
-            <button type="button" onclick="search()">検索</button>
-            <button type="button" onclick="goBack()">戻る</button>
-        </div>
-    </form>
-
-    <script>
-        function search() {
-            // Add your search logic here
-            // You can use JavaScript to retrieve values from the form fields and perform the search
-        }
-
-        function goBack() {
-            window.history.back();
-        }
-    </script>
+	<div>
+		
+		<form th:action="@{/VstoreReg}" method="post">
+		
+                <label for="Sname">店舗名:</label>
+                <input type="text" id="Sname" name="Sname" required>
+              
+               
+                
+                 <label for="Shour">営業時間:</label>
+                 <input type="time" name="example1"value="00:00">
+                 ～<input type="time" name="example2"value="00:00">
+                
+                
+                <label for="Sadd">住所:</label>
+               
+                <label>
+				    <span>郵便番号</span>
+				    <input type="text" name="postal_code" minlength="7" maxlength="8" pattern="\d*" autocomplete="shipping postal-code">
+				  </label>
+				  <label>
+				    <span>都道府県</span>
+				    
+				     <input type="text" name="prefecture" autocomplete="shipping address-level1">
+				    
+				  
+				  </label>
+				  <label>
+				    <span>市区町村</span>
+				    <input type="text" name="city" autocomplete="shipping address-level2">
+				  </label>
+				  <label>
+				    <span>町名・番地</span>
+				    <input type="text" name="address1" autocomplete="shipping address-line1">
+				  </label>
+				  <label>
+				    <span>建物名等</span>
+				    <input type="text" name="address2" autocomplete="shipping address-line2">
+				  </label>
+  
+                <label for="Stel">電話番号:</label>
+               	<input type="text" id="Simg" name="Simg" required>
+               	
+               	<button type="button" onclick="search()">検索</button>
+                <button type="button" onclick="goBack()">戻る</button>
+          
+        </form>
+        
+        
+      
+   	</div>
 </body>
 </html>
