--- a/MySecurity2/src/main/resources/templates/uss.html
+++ b/MySecurity2/src/main/resources/templates/uss.html
@@ -53,6 +53,12 @@
                	
                	<button type="button" onclick="search()">検索</button>
                 <button type="button" onclick="goBack()">戻る</button>
+                <script>
+    function goBack() {
+        window.history.back();
+    }
+</script>
+          
           
         </form>
         
