--- a/MySecurity2/src/main/resources/templates/vsignup.html
+++ b/MySecurity2/src/main/resources/templates/vsignup.html
@@ -1,23 +1,24 @@
+<!-- HTMLファイル -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/style5.css}">
     <title>システムサインアップ</title>
 </head>
 <body>
     <div class="login-container">
         <h2>システムサインアップ</h2>
         <form th:action="@{/mylogin}" method="post">
-                <label for="username"></label>
-                <input type="text" id="username" name="username"placeholder="ログインID" required>
-                <label for="password"></label>
-                <input type="password" id="password" name="password"placeholder="パスワード" required>
-                <button type="submit">登録</button><br>
-                <button type="button" onclick="history.back()">戻る</button>
-            </div>
+            <label for="username"></label>
+            <input type="text" id="username" name="username" placeholder="ログインID" required>
+            <label for="password"></label>
+            <input type="password" id="password" name="password" placeholder="パスワード" required>
+            <button type="submit">登録</button>
+            <button type="button" onclick="history.back()">戻る</button>
         </form>
     </div>
 </body>
