--- a/MySecurity2/src/main/resources/templates/vdbReg.html
+++ b/MySecurity2/src/main/resources/templates/vdbReg.html
@@ -11,15 +11,64 @@
 	<div>
       <form th:action="@{/VdbReg}" method="post">
 		
-                <label for="SSQL">SQL:</label>
-                <textarea id="SSQL" name="SSQL" cols="50" rows="10" required>
-               </textarea>
+            
+            <form th:action="@{/vitemReg}" method="post" enctype="multipart/form-data" onsubmit="showPopup()">
+            
+            
+            <label for="Ibar">バーコード:</label>
+            <input type="text" id="Ibar" name="ibar" required>
+             
+            <div class="form-group">
+                <label for="genre">ジャンル:</label>
+                <select id="genre" name="genre">
+                    <option value="米・雑穀・シリアル">米・雑穀・シリアル</option>
+                    <option value="麺類">麺類</option>
+                    <option value="野菜">野菜</option>
+    				<option value="水産物・水産加工品">水産物・水産加工品</option>
+    				<option value="肉・肉加工品">肉・肉加工品</option>
+    				<option value="タマゴ・チーズ・乳製品">タマゴ・チーズ・乳製品</option>
+    				<option value="果物">果物</option>
+    				<option value="惣菜・レトルト・冷凍">惣菜・レトルト・冷凍</option>
+    				<option value="豆腐・納豆・漬物">豆腐・納豆・漬物</option>
+    				<option value="パン">パン</option>
+    				<option value="ジャム・はちみつ">ジャム・はちみつ</option>
+    				<option value="粉類">粉類</option>
+    				<option value="乾物">乾物</option>
+   					<option value="ダイエットフード">ダイエットフード</option>
+    				<option value="缶詰・瓶詰">缶詰・瓶詰</option>
+    				<option value="調味料">調味料</option>
+   					<option value="洋菓子">洋菓子</option>
+    				<option value="和菓子">和菓子</option>
+    				<option value="菓子材料">菓子材料</option>
+    				<option value="スナック・駄菓子">スナック・駄菓子</option>
+ 					<option value="おつまみ・珍味">おつまみ・珍味</option>
+ 					<option value="ドライフルーツ">ドライフルーツ</option>
+  				</select>
+            </div>
+            
+            <label for="Iname">商品名:</label>
+            <input type="text" id="Iname" name="productName" required>
+            
+
+            <label for="Iimg">商品イメージ:</label>
+            <input type="file" id="Iimg" name="imagePath" required>
+            
+            <div class="form-group">
+                <label for="expirationDate">賞味期限:</label>
+                <input type="date" id="expirationDate" name="expirationDate">
+            </div>
+            
+            <label for="Ipri">値段:</label>
+            <input type="text" id="Ipri" name="price" required>
+            
+            <button class="Vhome" onclick="location.href='vhome'">戻る</button>
+            <button type="submit">新規登録</button>
                
                	
           
         </form>
-        <button class="Vhome" onclick="location.href='vhome'">戻る</button>
-                <button type="submit">登録</button>
+   
    	</div>
 </body>
+
 </html>
