--- a/MySecurity2/src/main/resources/templates/vsignup.html
+++ b/MySecurity2/src/main/resources/templates/vsignup.html
@@ -12,11 +12,11 @@
 <body>
     <div class="login-container">
         <h2>システムサインアップ</h2>
-        <form th:action="@{/mylogin}" method="post">
-            <label for="username"></label>
-            <input type="text" id="username" name="username" placeholder="ログインID" required>
+        <form th:action="@{/vsignup}" method="post">
+            <label for="loginid"></label>
+            <input type="text" id="loginid" name="loginid" placeholder="ログインID" required th:maxlength="10">
             <label for="password"></label>
-            <input type="password" id="password" name="password" placeholder="パスワード" required>
+            <input type="password" id="password" name="password" placeholder="パスワード" required th:maxlength="10">
             <button type="submit">登録</button>
             <button type="button" onclick="history.back()">戻る</button>
         </form>
