--- a/MySecurity2/src/main/resources/templates/vlogin.html
+++ b/MySecurity2/src/main/resources/templates/vlogin.html
@@ -23,9 +23,7 @@
         <p th:if="${error}" style="color: red" th:text="${error}"></p>
 
         <!-- サインアップフォーム -->
-        <form action="/vsignup" method="get">
-            <button type="submit">サインアップ</button>
-        </form>
+       <button class="vsignup" onclick="location.href='vsignup'">サインアップ</button>
     </div>
 </body>
 </html>
