--- a/MySecurity2/src/main/resources/templates/vsignup.html
+++ b/MySecurity2/src/main/resources/templates/vsignup.html
@@ -18,8 +18,10 @@
             <label for="password"></label>
             <input type="password" id="password" name="password" placeholder="パスワード" required th:maxlength="10">
             <button type="submit">登録</button>
-            <button type="button" onclick="history.back()">戻る</button>
+           
         </form>
+         <p th:text="${loginerror}"></p>
+         <button class="vlogin" onclick="location.href='vlogin'">戻る</button>
     </div>
 </body>
 </html>
