--- a/MySecurity2/src/main/resources/templates/vdbReg.html
+++ b/MySecurity2/src/main/resources/templates/vdbReg.html
@@ -9,14 +9,18 @@
 </head>
 <body>
 	<div>
-      <form th:action="@{/VdbReg}" method="post">
-		
-            
-            <form th:action="@{/vitemReg}" method="post" enctype="multipart/form-data" onsubmit="showPopup()">
+      
+		<div class="login-container">
+        <div th:if="${message}" class="alert alert-success" role="alert" id="popup">
+            <p th:text="${message}"></p>
+          
+        </div>
+            <p th:text="${id}"></p>
+            <form th:action="@{/vdbReg}" method="post" enctype="multipart/form-data" onsubmit="showPopup()">
             
             
             <label for="Ibar">バーコード:</label>
-            <input type="text" id="Ibar" name="ibar" required>
+            <input type="text" id="Ibar" name="barcode" required>
              
             <div class="form-group">
                 <label for="genre">ジャンル:</label>
@@ -61,11 +65,8 @@
             <label for="Ipri">値段:</label>
             <input type="text" id="Ipri" name="price" required>
             
-            <button class="Vhome" onclick="location.href='vhome'">戻る</button>
-            <button type="submit">新規登録</button>
-               
-               	
-          
+       		<button class="Vhome" onclick="location.href='vhome'">戻る</button>
+            <button type="submit">新規登録</button>       
         </form>
    
    	</div>
