--- a/MySecurity2/src/main/resources/templates/vhome.html
+++ b/MySecurity2/src/main/resources/templates/vhome.html
@@ -12,6 +12,7 @@
         <button class="StoreReg" onclick="location.href='vstoreReg'">店舗登録</button>
         <button class="DbReg" onclick="location.href='vdbReg'">DB登録</button>
         <button class="ItemList" onclick="location.href='vitemList'">値引き商品一覧</button>
+        <button class="Vlogout" onclick="location.href='vlogin'"th:action="@{/vlogout}" method="post">logout</button>
         <p th:text="${id}">aaaa</p>
         
    	</div>
