--- a/MySecurity2/src/main/resources/templates/vitemReg.html
+++ b/MySecurity2/src/main/resources/templates/vitemReg.html
@@ -9,34 +9,27 @@
 </head>
 <body>
     <div id="column" class="column05">
-        <div th:if="${message}" class="alert alert-success" role="alert" id="popup">
-            <p th:text="${message}"></p>
-        </div>
-        <form th:action="@{/barItem}" method="post" enctype="multipart/form-data" onsubmit="showPopup()">
+      
+    
+        <form th:action="@{/vitemReg}" method="post" enctype="multipart/form-data" onsubmit="showPopup()">
             
             <label for="Ibar">バーコード:</label>
-            <input type="text" id="Ibar" name="ibar" required>
+            <input type="text" id="Ibar" name="barcode" required>
             
-            <label for="Iname">商品名:</label>
-            <input type="text" id="Iname" name="productName" required>
-            
-          
-            
-            <label for="Iimg">商品イメージ:</label>
-            <input type="file" id="Iimg" name="imagePath" required>
-            
-            <label for="Ipri">値段:</label>
-            <input type="text" id="Ipri" name="price" required>
+           
             
             <button class="Vhome" onclick="location.href='vitemList'">戻る</button>
-            <button type="submit">新規値引き</button>
+            <button type="submit" onclick="showDetailButton()">新規値引き</button>
+            <div th:if="${message}" class="alert alert-success" role="alert" id="popup">
+		
+           <a th:href="@{'/viewItem/' + ${message[0].id}}" class="button" id="detailButton" >詳細</a>
+        </div>
+          
         </form>
         
         <script>
-            // ポップアップを表示するJavaScript
-            function showPopup() {
-                document.getElementById('popup').style.display = 'block';
-            }
+       
+            
         </script>
     </div>
 </body>
